# jupyter-ws-tunnel

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  tsconfig.json
.github/workflows/: publish-npm.yml  publish-pypi.yml
example/: example.ipynb  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  tsconfig.json
example/jupyter_widget_ws_example/: comm_bridge.py  index.js  index.js.map  main.py  server.py  widget.py
example/jupyter_widget_ws_example/static/: main.js  main.js.map  style.css  widget.js  widget.js.map
example/jupyter_widget_ws_example/templates/: index.html
example/jupyter_ws_tunnel_example/: main.py  server.py  widget.py
example/jupyter_ws_tunnel_example/static/: main.js  main.js.map  widget.js  widget.js.map
example/jupyter_ws_tunnel_example/templates/: index.html
example/src/: Log.ts  index.ts  main.ts  socket.ts  widget.ts
jupyter_widget_ws/: __init__.py  comm_bridge.py
jupyter_ws_tunnel/: __init__.py  comm_bridge.py
src/: fetch.ts  index.ts
