[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-widget-ws"
version = "0.1.0"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]

requires-python = ">=3.10"
dependencies = [
    "hypercorn>=0.17.0",
]

[tool.setuptools.packages.find]
include = ["jupyter_widget_ws"]
