[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-widget-ws-example"
version = "0.1"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]

requires-python = ">=3.10"
dependencies = [
    "anywidget>=0.9",
    "click~=8.1.0",
    "Quart>=0.20.0",
    "hypercorn",
    "backoff==2.2.1",
    "requests>=2.31.0",
]

[project.scripts]
jupyter-widget-ws-example = "jupyter_widget_ws_example.main:main"

[tool.setuptools.packages.find]
include = ["jupyter_widget_ws_example"]

[tool.setuptools.package-data]
"jupyter_widget_ws_example.static" = ["*"]
"jupyter_widget_ws_example.templates" = ["*"]