[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-ws-tunnel-example"
version = "0.2.0"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"}
]

requires-python = ">=3.10"
dependencies = [
    "jupyter-ws-tunnel",
    "anywidget>=0.9",
    "click~=8.1.0",
    "Quart>=0.20.0",
    "hypercorn",
    "backoff==2.2.1",
    "requests>=2.31.0",
]

[project.scripts]
jupyter-ws-tunnel-example = "jupyter_ws_tunnel_example.main:main"

[tool.setuptools.packages.find]
include = ["jupyter_ws_tunnel_example"]

[tool.setuptools.package-data]
"jupyter_ws_tunnel_example.static" = ["*"]
"jupyter_ws_tunnel_example.templates" = ["*"]
